# gettitle

./: .gitignore  .travis.yml  Makefile  Pipfile  README.md  gettitle.py  pyproject.toml  requirements.txt  setup.py
gettitle/: __main__.py  constants.py  exceptions.py  gettitle.py  handles.py  special_sites.py
tests/: test_gettitle.py
