[tool.poetry]
name = "gettitle"
version = "1.3.1"
description = "Get webpage title(s) by url(s) from terminal."
authors = ["Frank Jheng <M157q.tw@gmail.com>"]
license = "MIT"
repository = "https://github.com/M157q/gettitle"
keywords = ["cli", "webpage", "title"]

# poetry hasn't support platforms tag
# But it appears in the code <https://github.com/python-poetry/poetry/blob/845ae55c3c85714e4234c9ad46d3c8665f2592db/poetry/masonry/metadata.py#L12>
# platforms = ["Linux"]

classifiers=[
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.5"
pyperclip = "^1.6.0"
selenium = "^3.8.0"
cfscrape = "^2.1.1"
lxml = "^4.5.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[tool.poetry.scripts]
gettitle = "gettitle.gettitle:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
